# open-data-pvnet

./: .all-contributorsrc  .env.local  .gitignore  .pre-commit-config.yaml  README.md  datasets.md  getting_started.md  maintainers.md  pyproject.toml  test_dwd.py  test_metadata.py  test_utils.py  working_with_nwp.md
.github/workflows/: pytest.yaml
docs/: datasets.md  getting_started.md  maintainers.md  met_office_dataset.md
src/open_data_pvnet/: Untitled.ipynb  __init__.py  collect_pvlive_data.py  dwd.py  dwd_data_config.yaml  main.py  untitled.txt
src/open_data_pvnet/configs/: dwd_data_config.yaml  gfs_data_config.yaml  met_office_data_config.yaml  met_office_global_data_config.yaml  met_office_uk_data_config.yaml
src/open_data_pvnet/data/: target_data.nc
src/open_data_pvnet/nwp/: dwd.py  gfs.py  gfs_dataset.py  met_office.py
src/open_data_pvnet/scripts/: archive.py  collect_pvlive_data.py  fetch_pvlive_data.py
src/open_data_pvnet/utils/: config_loader.py  data_converters.py  data_downloader.py  data_uploader.py  env_loader.py  main.py
src/open_data_pvnet/utils.py/: env_loader.py
tests/: test_dwd.py  test_main.py  test_met_office.py  test_metadata.py  test_utils.py
tests/data/: test_pvlive_data.py
