[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-data-pvnet"
version = "0.1.0"
description = "An open-source project supporting solar forecasting with PVNet."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name="Peter Dudfield", email="info@openclimatefix.org" }
]
homepage = "https://github.com/openclimatefix/open-data-pvnet"
repository = "https://github.com/openclimatefix/open-data-pvnet"
keywords = ["solar forecasting", "open-source", "renewable energy", "machine learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "requests",
    "xarray",
    "zarr",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pvlive-api",
    "black",
    "flake8",
    "ruff",
    "pre-commit",
    "setuptools",
    "wheel",
    "twine",
    "pytest",
    "pytest-cov",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
exclude = [".ipynb_checkpoints", "tests", "configs.example"]
select = ["E", "F", "W", "C90"]
ignore = ["E501"]
target-version = "py39"

[tool.setuptools.packages.find]
where = ["src"]
